RESOLVED FIXED119757
Harden executeConstruct against incorrect return types from host functions
https://bugs.webkit.org/show_bug.cgi?id=119757
Summary Harden executeConstruct against incorrect return types from host functions
Oliver Hunt
Reported 2013-08-13 10:26:54 PDT
Harden executeConstruct against incorrect return types from host functions
Attachments
Patch (1.94 KB, patch)
2013-08-13 10:28 PDT, Oliver Hunt
mhahnenberg: review+
Oliver Hunt
Comment 1 2013-08-13 10:28:35 PDT
Oliver Hunt
Comment 2 2013-08-13 10:31:57 PDT
Mark Hahnenberg
Comment 3 2013-08-13 10:36:36 PDT
Comment on attachment 208649 [details] Patch r=me
Oliver Hunt
Comment 4 2013-08-13 10:48:44 PDT
Note You need to log in before you can comment on or make changes to this bug.