Harden executeConstruct against incorrect return types from host functions https://bugs.webkit.org/show_bug.cgi?id=119757

Reviewed by Mark Hahnenberg.

Add logic to guard against bogus return types.  There doesn't seem to be any
class in webkit that does this wrong, but the typed array stubs in debug JSC
do exhibit this bad behaviour.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::executeConstruct):

Canonical link: https://commits.webkit.org/137700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154011 268f45cc-cd09-0410-ab3c-d52691b4dbfc